Reordered file structure, and fixed text not showing up in about section

--- a/assets/css/_about.css
+++ b/assets/css/_about.css
@@ -14,7 +14,8 @@
 .about-content {
   max-width: 45%;
   min-width: 200px;
-
+  color: var(--text);
+  z-index: 100;
 }
 
 .about-content h1 {
